compila para java 8 e reduz as imagens dos icones